Implement Phase 2 national organizational model
